Fixed Java9+ compilation.